# Rust-Racers

./: .gitignore  CLIENT_PREDICTION.md  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: big-map.txt  map.txt  map2.txt  map2_doubled.txt  map_demo.txt
assets/title_screen/: MainMusic.m4a
notes/: theta-notes.md
src/: camera.rs  car.rs  car_skins.rs  car_state.rs  client_prediction.rs  collisions.rs  credits.rs  drift_settings.rs  get_ip.rs  interpolation.rs  intro.rs  lap_system.rs  lobby.rs  main.rs  map.rs  multiplayer.rs  networking.rs  networking_plugin.rs  server.rs  speed.rs  terrain.rs  theta.rs  title_screen.rs  victory_screen.rs
src/client/: client.rs
src/game_logic/: collisions.rs  components.rs  constants.rs  difficulty.rs  lap_system.rs  map.rs  mod.rs  physics.rs  terrain.rs  theta.rs  theta_grid.rs
src/prediction/: client_prediction.rs  input_buffer.rs  mod.rs  reconciliation.rs  smooth_correction.rs  state_snapshot.rs
src/server/: client_prediction.rs  lobby_management.rs  main.rs  mod.rs  net.rs  server.rs  simulation.rs  types.rs  utils.rs
