[package]
name = "rust_racers"
version = "0.1.0"
edition = "2024"
default-run = "rust_racers"

# Apply basic optimiations to our code in dev builds
[profile.dev]
opt-level = 1

# Apply all optimiations to dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.16.1"

[[bin]]
name = "client"
path = "src/client/client.rs"