[package]
name = "rust_racers"
version = "0.1.0"
edition = "2024"
default-run = "rust_racers"

# Apply basic optimiations to our code in dev builds
[profile.dev]
opt-level = 1

# Apply all optimiations to dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = ["mp3"] }
serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"

[[bin]]
name = "server"
path = "src/server/server.rs"